# vmbid

./: .gitignore  Cargo.toml  Dockerfile  README.md  decisions.md  rustfmt.toml
src/: errors.rs  handlers.rs  lib.rs  main.rs  models.rs  state.rs
src/handlers/: allocation.rs  buy.rs  mod.rs  sell.rs
tests/: buy_mixed.lua  concurrency_test.rs  property_test.rs  sell.lua
