[package]
name = "project"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
thiserror = "1.0"
parking_lot= "0.12"
log = "0.4"
env_logger="0.11"

[dev-dependencies]
proptest = "1.9.0"
rand = "0.9.2"

[profile.test.package.proptest]
opt-level = 3
