[package]
name = "vmbid"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
parking_lot= "0.12"

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.149"

# Validation
validator = { version = "0.20", features = ["derive"] }

# Error handling
thiserror = "1.0"

# Observability
log = "0.4"
env_logger="0.11"

[dev-dependencies]
proptest = "1.9.0"
rand = "0.9.2"

[profile.test.package.proptest]
opt-level = 3
